--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -379,6 +379,10 @@ SEARCH RESULTS PAGE
 		flex: 1;
 	}
 
+	.results-group-footer {
+		text-align: center;	
+	}
+	
 	.view-all-link {
 		font-size: 14px;
 		color: #888;
