search result template tweaks

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -380,9 +380,9 @@ SEARCH RESULTS PAGE
 	}
 
 	.results-group-footer {
-		text-align: center;	
+		text-align: center;
 	}
-	
+
 	.view-all-link {
 		font-size: 14px;
 		color: #888;
@@ -561,7 +561,7 @@ div.search_results .groups-list li .last-activity {
 		color: #122b46;
 		letter-spacing: -0.24px;
 		line-height: 1;
-		margin-bottom: 4px;
+		margin: 5px 0;
 		text-align: left;
 	}
 
@@ -574,6 +574,104 @@ div.search_results .groups-list li .last-activity {
 		color: #737373;
 		font-size: 12px;
 		line-height: 1.4;
+	}
+
+	/*star rating for products*/
+	.rating-custom div.product .woocommerce-product-rating {
+		margin-bottom: 1.618em;
+	}
+
+	.rating-custom .woocommerce-product-rating .star-rating {
+		margin: .5em 4px 0 0;
+		float: left;
+	}
+
+	.rating-custom .woocommerce-product-rating::after, .rating-custom .woocommerce-product-rating::before {
+
+		content: ' ';
+		display: table;
+
+	}
+
+	.rating-custom .woocommerce-product-rating {
+		line-height: 2;
+	}
+
+	.rating-custom .star-rating {
+		float: right;
+		overflow: hidden;
+		position: relative;
+		height: 1em;
+		line-height: 1;
+		font-size: 1em;
+		width: 5.4em;
+		font-family: star;
+	}
+
+	.rating-custom .star-rating::before {
+		content: '\73\73\73\73\73';
+		color: #d3ced2;
+		float: left;
+		top: 0;
+		left: 0;
+		position: absolute;
+	}
+
+	.rating-custom .star-rating {
+		line-height: 1;
+		font-size: 1em;
+		font-family: star;
+	}
+
+	.rating-custom .star-rating span {
+		overflow: hidden;
+		float: left;
+		top: 0;
+		left: 0;
+		position: absolute;
+		padding-top: 1.5em;
+	}
+
+	.rating-custom .star-rating span::before {
+		content: '\53\53\53\53\53';
+		top: 0;
+		position: absolute;
+		left: 0;
+	}
+
+	.rating-custom .star-rating span {
+
+		overflow: hidden;
+		float: left;
+		top: 0;
+		left: 0;
+		position: absolute;
+		padding-top: 1.5em;
+
+	}
+
+	.woocommerce-review-link {
+		display: none;
+	}
+
+	.product-sale {
+		margin-top: 0.5em;
+		.onsale {
+			padding: .202em;
+			text-align: center;
+			background-color: #77a464;
+			color: #fff;
+			font-size: 80%;
+			z-index: 9;
+		}
+	}
+
+
+	.posted-in {
+		a {
+			color: #737373;
+			font-size: 12px;
+		}
 	}
 }
 
