link preview tweaks

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -465,6 +465,10 @@
 				text-align: center;
 				margin-top: 10px;
 			}
+			
+			.activity-url-thumb-nav {
+				text-align: center;
+			}
 		}
 
 		#activity-url-scrapper-text-holder {
