--- a/src/bp-media/css/dropzone.min-rtl.css
+++ b/src/bp-media/css/dropzone.min-rtl.css
@@ -311,7 +311,7 @@
 	z-index: 20;
 	position: absolute;
 	top: 0;
-	left: 0;
+	right: 0;
 	opacity: 0;
 	font-size: 13px;
 	min-width: 100%;
@@ -401,8 +401,8 @@
 	position: absolute;
 	display: block;
 	top: 50%;
-	left: 50%;
-	margin-left: -27px;
+	right: 50%;
+	margin-right: -27px;
 	margin-top: -27px
 }
 
@@ -445,11 +445,11 @@
 	pointer-events: none;
 	position: absolute;
 	height: 16px;
-	left: 50%;
+	right: 50%;
 	top: 50%;
 	margin-top: -8px;
 	width: 80px;
-	margin-left: -40px;
+	margin-right: -40px;
 	background: rgba(255, 255, 255, 0.9);
 	-webkit-transform: scale(1);
 	border-radius: 8px;
@@ -461,7 +461,7 @@
 	background: linear-gradient(to bottom, #666, #444);
 	position: absolute;
 	top: 0;
-	left: 0;
+	right: 0;
 	bottom: 0;
 	width: 0;
 	-webkit-transition: width 300ms ease-in-out;
@@ -495,7 +495,7 @@
 	border-radius: 8px;
 	font-size: 13px;
 	top: 130px;
-	left: -10px;
+	right: -10px;
 	width: 140px;
 	background: #be2626;
 	background: linear-gradient(to bottom, #be2626, #a92222);
@@ -507,10 +507,10 @@
 	content: '';
 	position: absolute;
 	top: -6px;
-	left: 64px;
+	right: 64px;
 	width: 0;
 	height: 0;
-	border-left: 6px solid transparent;
 	border-right: 6px solid transparent;
+	border-left: 6px solid transparent;
 	border-bottom: 6px solid #be2626
 }
