--- a/src/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/src/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -459,3 +459,12 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 // Import global search styles
 
 @import "../common-styles/_bp_global_search";
+
+/**
+*-------------------------------------------------------------------------------
+* @section 12.0 - Media Search classes
+*-------------------------------------------------------------------------------
+*/
+// Import media styles
+
+@import "../common-styles/_bp_media";
