Comments are rolled up by default. Click on Comment button or comment count to expand comments https://trello.com/c/IZEHqAQw

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
@@ -17,6 +17,7 @@
 		input[type="button"],
 		input[type="reset"],
 		ul.button-nav:not(.button-tabs) li a,
+		.activity-state a,
 		.generic-button a,
 		.comment-reply-link,
 		a.bp-title-button,
