--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -177,26 +177,6 @@
 
 		} // close .activity-header
 
-		.activity-state {
-			display: none;
-
-			&.has-likes,
-			&.has-comments {
-				display: block;
-			}
-
-			.ac-state-separator {
-				display: none;
-			}
-
-			&.has-likes.has-comments {
-
-				.ac-state-separator {
-					display: inline-block;
-				}
-			}
-		}
-
 		.activity-content {
 
 			.activity-header,
@@ -215,6 +195,31 @@
 
 			p {
 				margin: 0;
+			}
+
+			.activity-state {
+				display: none;
+				font-size: 12px;
+
+				a {
+					border: 0;
+				}
+
+				&.has-likes,
+				&.has-comments {
+					display: block;
+				}
+
+				.ac-state-separator {
+					display: none;
+				}
+
+				&.has-likes.has-comments {
+
+					.ac-state-separator {
+						display: inline-block;
+					}
+				}
 			}
 
 		} // close .activity-content
@@ -465,7 +470,7 @@
 				text-align: center;
 				margin-top: 10px;
 			}
-			
+
 			.activity-url-thumb-nav {
 				text-align: center;
 			}
