--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1432,22 +1432,6 @@ a.layout-grid-view {
   vertical-align: middle;
 }
 
-.activity-list .activity-item .activity-state {
-  display: none;
-}
-
-.activity-list .activity-item .activity-state.has-likes, .activity-list .activity-item .activity-state.has-comments {
-  display: block;
-}
-
-.activity-list .activity-item .activity-state .ac-state-separator {
-  display: none;
-}
-
-.activity-list .activity-item .activity-state.has-likes.has-comments .ac-state-separator {
-  display: inline-block;
-}
-
 .activity-list .activity-item .activity-content .activity-header,
 .activity-list .activity-item .activity-content .comment-header {
   color: #767676;
@@ -1464,6 +1448,27 @@ a.layout-grid-view {
 
 .activity-list .activity-item .activity-content p {
   margin: 0;
+}
+
+.activity-list .activity-item .activity-content .activity-state {
+  display: none;
+  font-size: 12px;
+}
+
+.activity-list .activity-item .activity-content .activity-state a {
+  border: 0;
+}
+
+.activity-list .activity-item .activity-content .activity-state.has-likes, .activity-list .activity-item .activity-content .activity-state.has-comments {
+  display: block;
+}
+
+.activity-list .activity-item .activity-content .activity-state .ac-state-separator {
+  display: none;
+}
+
+.activity-list .activity-item .activity-content .activity-state.has-likes.has-comments .ac-state-separator {
+  display: inline-block;
 }
 
 .activity-list .activity-item .activity-inner p {
@@ -4443,6 +4448,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress .buddypress-wrap input[type="button"],
 .buddypress .buddypress-wrap input[type="reset"],
 .buddypress .buddypress-wrap ul.button-nav:not(.button-tabs) li a,
+.buddypress .buddypress-wrap .activity-state a,
 .buddypress .buddypress-wrap .generic-button a,
 .buddypress .buddypress-wrap .comment-reply-link,
 .buddypress .buddypress-wrap a.bp-title-button,
