--- a/src/bp-xprofile/admin/css/admin-rtl.css
+++ b/src/bp-xprofile/admin/css/admin-rtl.css
@@ -61,6 +61,8 @@ ul#field-group-tabs {
 	float: right;
 	padding: 0;
 	margin: 0;
+	border-right: 1px solid #e5e5e5;
+	border-left: none;
 	display: none;
 }
 
@@ -100,9 +102,8 @@ ul#field-group-tabs li.drop-candidate.ui-state-acceptable:not(.ui-state-active) 
 ul#field-group-tabs li a.ui-tab {
 	font-size: 14px;
 	display: block;
-	padding: 10px 14px 11px;
-	border-top: 1px solid #e5e5e5;
-	border-left: 1px solid #e5e5e5;
+	padding: 10px 14px;
+	border: 1px solid #e5e5e5;
 	border-right: none;
 	background-color: #f5f5f5;
 	text-decoration: none;
@@ -114,11 +115,6 @@ ul#field-group-tabs li a.ui-tab {
 ul#field-group-tabs li a.ui-tab span {
 	font-size: 13px;
 	font-weight: 400;
-}
-
-/* First tab */
-ul#field-group-tabs li:first-child a.ui-tab {
-	border-right: 1px solid #e5e5e5;
 }
 
 /* Selected tab */
