--- a/src/bp-xprofile/admin/css/admin-rtl.css
+++ b/src/bp-xprofile/admin/css/admin-rtl.css
@@ -83,8 +83,8 @@ ul#field-group-tabs li.ui-state-acceptable:not(.ui-state-active) a.ui-tab {
 }
 
 ul#field-group-tabs li.ui-state-acceptable a.ui-tab {
-	margin-right: 5px;
-	margin-right: 5px;
+	margin-left: 10px;
+	margin-right: 0;
 }
 
 ul#field-group-tabs li.drop-candidate.ui-state-acceptable:not(.ui-state-active) a.ui-tab {
