--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1453,6 +1453,7 @@ a.layout-grid-view {
 .activity-list .activity-item .activity-content .activity-state {
   display: none;
   font-size: 12px;
+  clear: both;
 }
 
 .activity-list .activity-item .activity-content .activity-state a {
