When comment threading limit is reached there should still be a reply button but the comments should not indent

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
@@ -23,6 +23,11 @@
 				ul {
 					// indent any nested comments - comment to a comment
 					margin-left: 5%;
+
+					// When comment threading limit is reached, the comments should not indent
+					li.detached-comment-item {
+						margin-left: -5%;
+					}
 				}
 			}
 
