--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -341,7 +341,7 @@ tr.bp-custom-post-type-child-field td {
   margin-top: 20px;
   padding: 2.2em 3em 3em;
   min-width: 255px;
-  max-width: 100%;
+  max-width: 1050px;
   border-radius: 8px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   background: #fff;
