--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -69,7 +69,7 @@ TABLE OF CONTENTS:
   border: 1px solid #e5e5e5;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   margin: 0 0 20px;
-  padding: 2em 2.8em;
+  padding: 2.2em 2.8em 2em;
 }
 
 .bp-about-wrap img {
