--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -963,3 +963,9 @@ body.post-type-bp_ps_form .page-title-action {
 #bbpress_group_admin_ui_meta_box fieldset {
 	min-width: 230px;
 }
+
+/* Notices */
+.buddypress .wrap div#message {
+	margin: 25px 0 0;
+}
+
