--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -949,3 +949,8 @@ body.post-type-bp_ps_form .page-title-action {
 #bbpress_group_admin_ui_meta_box fieldset {
   min-width: 230px;
 }
+
+/* Notices */
+.buddypress .wrap div#message {
+  margin: 25px 0 0;
+}
