--- a/src/bp-core/css/admin-bar-rtl.css
+++ b/src/bp-core/css/admin-bar-rtl.css
@@ -87,7 +87,6 @@ li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-ap
 	padding: 3px 0 22px 13px;
 }
 
-.nav-tab-wrapper a.bp-credits.nav-tab,
 .nav-tab-wrapper a.bp-appboss.nav-tab {
-	float: left;
+	display: none !important;
 }
