--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -1011,3 +1011,11 @@ tr.child-no-padding-first th {
 tr.child-no-padding-first td {
   padding: 15px 10px 5px 10px;
 }
+
+body.buddypress.buddyboss_page_bp-appboss ul.subsubsub {
+  margin-top: 0px;
+}
+
+body.buddypress.buddyboss_page_bp-appboss .nav-settings-subsubsub {
+  padding: 0px 0 14px 0px;
+}
