Admin > AppBoss tab changes

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -713,7 +713,7 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .bp_appboss_wrap .appboss-featured {
-	margin: 20px 0 0;
+	margin: 20px 2px 0;
 }
 
 .bp_appboss_wrap .appboss-banner-block,
@@ -1023,12 +1023,4 @@ tr.child-no-padding-first th {
 
 tr.child-no-padding-first td {
   padding: 15px 10px 5px 10px;
-}
-
-body.buddypress.buddyboss_page_bp-appboss ul.subsubsub {
-  margin-top: 0px;
-}
-
-body.buddypress.buddyboss_page_bp-appboss .nav-settings-subsubsub {
-  padding: 0px 0px 14px 0;
 }
