--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -21,9 +21,10 @@ TABLE OF CONTENTS:
 	2.6 Settings - Cards
 3.0 Users
 	3.1 Users List
-	3.2 Site Notices
+	3.2 Activity List
+	3.3 Site Notices
 4.0 Emails - Edit page
-5.0 Tools - BuddyPress
+5.0 Tools - BuddyBoss
 6.0 Plugins page
 7.0 AppBoss page
 8.0 Miscellaneous
@@ -525,7 +526,20 @@ body.users_page_bp-signups td.count_sent {
 }
 
 /*
- * 3.2 Site Notices
+ * 3.2 Activity List
+ */
+#bp-activities-form .fixed .column-author {
+  width: 15%;
+}
+
+#bp-activities-form #the-comment-list td.comment img {
+  max-width: 300px;
+  display: block;
+  margin: 0.6em 0;
+}
+
+/*
+ * 3.3 Site Notices
  */
 .bp-new-notice-panel {
   background: #fff;
@@ -628,7 +642,7 @@ body.post-type-bp-email .categorydiv label {
 }
 
 /*------------------------------------------------------------------------------
- * 5.0 Tools - BuddyPress
+ * 5.0 Tools - BuddyBoss
  *----------------------------------------------------------------------------*/
 .tools_page_bp-tools .wrap,
 .tools_page_bbp-repair .wrap {
