--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -53,6 +53,113 @@
 		}
 	}
 
+	#whats-new-toolbar {
+		.post-elements-buttons-item {
+			display: inline-block;
+			position: relative;
+
+			a.toolbar-button {
+				display: inline-block;
+				padding: 4px 10px;
+				border: 1px solid transparent;
+				line-height: normal;
+			}
+
+			.activity-attached-gif-container::before,
+			.activity-attached-gif-container::after {
+				left: 24px;
+				border-color: #f5f8fa;
+				border-width: 8px;
+			}
+
+			.gif-media-search {
+				position: relative;
+				max-width: 450px;
+
+				.gif-media-search-dropdown {
+					position: absolute;
+					top: 100%;
+					z-index: 900;
+					display: none;
+					float: left;
+					margin: 2px 0 0;
+					background: #fff;
+					border-radius: 4px;
+					box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+					background-clip: padding-box;
+
+					&.open {
+						display: block;
+						width: 400px;
+					}
+
+					.gif-search-query {
+						background-color: #f5f8fa;
+						background-repeat: repeat-x;
+						background-image: linear-gradient(#fff, #f5f8fa);
+						border: 1px solid #e6ecf0;
+						border-radius: 4px 4px 0 0;
+						position: relative;
+						padding: 8px;
+						margin: 0;
+					}
+
+					.gif-search-results {
+						padding: 3px 6px;
+						overflow: auto;
+						min-height: 270px;
+						max-height: 410px;
+
+						ul {
+							display: flex;
+							flex-wrap: wrap;
+							list-style: none;
+
+							li {
+								display: block;
+								flex: 0 0 50%;
+								border: 3px solid #fff;
+								position: relative;
+								min-height: 100px;
+
+								&.bg1 {
+									background: #e0245e
+								}
+
+								&.bg2 {
+									background: #f45d22;
+								}
+
+								&.bg3 {
+									background: #ffad1f
+								}
+
+								&.bg4 {
+									background: #17bf63
+								}
+
+								&.bg5 {
+									background: #1c94e0
+								}
+
+								&.bg6 {
+									background: #794bc4
+								}
+							}
+						}
+
+						.found-media-item img {
+							width: 100%;
+							height: 100%;
+						}
+					}
+
+				}
+			}
+
+		}
+	}
+
 	// these ID's need replacing with this!
 	//.textarea-wrap { // #whats-new-textarea
 
