--- a/src/bp-xprofile/admin/css/admin-rtl.css
+++ b/src/bp-xprofile/admin/css/admin-rtl.css
@@ -131,7 +131,7 @@ ul#field-group-tabs li.ui-state-active a.ui-tab {
 	border-style: solid;
 	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-	padding: 10px;
+	padding: 15px 20px;
 	margin-bottom: 10px;
 }
 
